grammar.js
    source_file: $ => repeat(choice(
      $.using_statement,
      $.facet_annotation,
      $._declaration,
    )),

    // ── Using ──────────────────────────────────────────────────
    using_statement: $ => seq(
      'using',
      field('pod', $.identifier),
      optional(seq('::', field('type', $.identifier))),
      optional(seq('as', field('alias', $.identifier))),
    ),

    // ── Declarations ───────────────────────────────────────────
    _declaration: $ => choice(
      $.class_declaration,
      $.enum_declaration,
      $.mixin_declaration,
      $.facet_declaration,
    ),

    class_declaration: $ => seq(
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      optional($.inheritance),
      field('body', $.class_body),
    ),

    class_body: $ => seq(
      '{',
      repeat($._class_member),
      '}',
    ),

    // ── Enum ───────────────────────────────────────────────────
    facet_declaration: $ => seq(
      optional($.modifiers),
      'facet',
      'class',
      field('name', $.identifier),
      optional($.inheritance),
      field('body', $.class_body),
    ),

    _class_member: $ => choice(
      $.facet_annotation,
      $.field_declaration,
      $.method_declaration,
      $.constructor_declaration,
    ),

    field_declaration: $ => seq(
      optional($.modifiers),
      field('type', $._type),
      field('name', $.identifier),
      optional(seq(':=', field('value', $._expression))),
    ),

    method_declaration: $ => seq(
      optional($.modifiers),
      field('return_type', $._type),
      field('name', $.identifier),
      field('params', $.parameter_list),
      optional(field('body', $.block)),
    ),

    parameter_list: $ => seq(
      '(',
      optional(seq(
        $.parameter,
        repeat(seq(',', $.parameter)),
      )),
      ')',
    ),

    modifiers: $ => repeat1(choice(
      'abstract',
      'const',
      'final',
      'native',
      'once',
      'override',
      'static',
      'virtual',
      'public',
      'protected',
      'internal',
      'private',
      'readonly',
    )),

    // ── Facet Annotations ──────────────────────────────────────
    facet_annotation: $ => seq(
      '@',
      field('name', $.identifier),
      optional(field('config', $.facet_config)),
    ),

    facet_config: $ => seq(
      '{',
      repeat(seq(
        field('key', $.identifier),
        '=',
        field('value', $._expression),
      )),
      '}',
    ),

    // ── Types ──────────────────────────────────────────────────
    _type: $ => choice(
      $._simple_type,
      $.nullable_type,
      $.list_type,
      $.map_type,
      $.function_type,
    ),

    _statement: $ => choice(
      $.return_statement,
      $.throw_statement,
      $.break_statement,
      $.continue_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.switch_statement,
      $.try_statement,
      $.local_declaration,
      $.expression_statement,
      $.block,
    ),

    block: $ => seq('{', repeat($._statement), '}'),

    throw_statement: $ => prec.right(seq(
      'throw',
      $._expression,
    )),

    break_statement: $ => 'break',

    continue_statement: $ => 'continue',

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $._statement),
      optional(seq(
        'else',
        field('alternative', $._statement),
      )),
    )),

    while_statement: $ => seq(
      'while',
      field('condition', $.parenthesized_expression),
      field('body', $._statement),
    ),

    for_statement: $ => seq(
      'for',
      '(',
      field('init', optional(choice($.local_declaration, $._expression))),
      ';',
      field('condition', optional($._expression)),
      ';',
      field('update', optional($._expression)),
      ')',
      field('body', $._statement),
    ),

    switch_statement: $ => seq(
      'switch',
      field('value', $.parenthesized_expression),
      '{',
      repeat($.case_clause),
      optional($.default_clause),
      '}',
    ),

    case_clause: $ => seq(
      'case',
      field('value', $._expression),
      ':',
      repeat($._statement),
    ),

    default_clause: $ => seq(
      'default',
      ':',
      repeat($._statement),
    ),

    try_statement: $ => seq(
      'try',
      field('body', $.block),
      repeat($.catch_clause),
      optional($.finally_clause),
    ),

    catch_clause: $ => seq(
      'catch',
      optional(seq(
        '(',
        field('type', $._type),
        field('name', $.identifier),
        ')',
      )),
      field('body', $.block),
    ),

    finally_clause: $ => seq(
      'finally',
      field('body', $.block),
    ),

    local_declaration: $ => choice(
      seq(
        field('type', $._type),
        field('name', $.identifier),
        ':=',
        field('value', $._expression),
      ),
      seq(
        field('name', $.identifier),
        ':=',
        field('value', $._expression),
      ),
    ),

    expression_statement: $ => $._expression,

    // ── Expressions ────────────────────────────────────────────
    _expression: $ => choice(
      $.identifier,
      $._literal,
      $.this_expression,
      $.super_expression,
      $.it_expression,
      $.parenthesized_expression,
      $.member_access,
      $.safe_member_access,
      $.dynamic_invoke,
      $.safe_dynamic_invoke,
      $.call_expression,
      $.index_expression,
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
      $.elvis_expression,
      $.type_check_expression,
      $.type_cast_expression,
      $.range_expression,
      $.assignment_expression,
      $.closure_expression,
      $.it_block,
    ),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    call_expression: $ => prec.left(PREC.PRIMARY, choice(
      seq(
        field('function', $._expression),
        field('arguments', $.argument_list),
        optional(field('trailing_closure', choice($.closure_expression, $.it_block))),
      ),
      seq(
        field('function', $._expression),
        field('trailing_closure', choice($.closure_expression, $.it_block)),
      ),
    )),

    argument_list: $ => seq(
      '(',
      optional(seq(
        $._expression,
        repeat(seq(',', $._expression)),
      )),
      ')',
    ),

    unary_expression: $ => choice(
      prec(PREC.UNARY, seq(choice('!', '-', '+'), $._expression)),
      prec(PREC.UNARY, seq(choice('++', '--'), $._expression)),
      prec(PREC.POSTFIX, seq($._expression, choice('++', '--'))),
    ),

    binary_expression: $ => choice(
      prec.left(PREC.MULTIPLICATIVE, seq($._expression, field('operator', choice('*', '/', '%')), $._expression)),
      prec.left(PREC.ADDITIVE, seq($._expression, field('operator', choice('+', '-')), $._expression)),
      prec.left(PREC.RELATIONAL, seq($._expression, field('operator', choice('<', '<=', '>', '>=', '<=>')), $._expression)),
      prec.left(PREC.EQUALITY, seq($._expression, field('operator', choice('==', '!=', '===', '!==')), $._expression)),
      prec.left(PREC.AND, seq($._expression, field('operator', '&&'), $._expression)),
      prec.left(PREC.OR, seq($._expression, field('operator', '||'), $._expression)),
    ),

    int_literal: $ => token(choice(
      /[0-9][0-9_]*/,
      /0x[0-9a-fA-F][0-9a-fA-F_]*/,
      /0b[01][01_]*/,
      /'.'/,
      /'\\[bfnrt'`$\\]'/,
      /'\\u[0-9a-fA-F]{4}'/,
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    string_content: $ => token(prec(-1, /[^"\\$]+/)),

    bool_literal: $ => choice('true', 'false'),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});
